// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PaymentStatus /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<div
  className="container content"
>
  <div
    className="inner"
  >
    <div
      className="main-column"
    >
      <div
        className="inner"
      >
        <h2
          className="row payment-status-row-1"
        >
          PAY_FAIL
        </h2>
        <div
          className="row payment-status-row-2"
        >
          PAY_SUB_H
        </div>
        <div
          className="row payment-status-row-3"
        >
          <Link
            className="button full"
            to="/default/payment/draft"
          >
            PAY_TRY_AGAIN_BTN
          </Link>
        </div>
        <div
          className="row payment-status-row-4"
        >
          <p>
            PAY_GIVE_UP_TXT
          </p>
          <button
            className="button full"
            onClick={[Function]}
            type="button"
          >
            PAY_GIVE_UP_BTN
          </button>
        </div>
      </div>
    </div>
    <Memo(Connect(Contact)) />
  </div>
</div>
`;

exports[`Test <PaymentStatus /> cases should render draft correctly 1`] = `
<div
  className="container content"
>
  <div
    className="inner"
  >
    <div
      className="main-column single"
    >
      <div
        className="inner"
      >
        <h2
          className="row"
        >
          Payment required to proceed
        </h2>
        <div
          className="row"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>By clicking on the button below you will be redirected to our payment gateway service where you can safely use your credit/debit card. From there you will be redirected to the website of your bank to confirm the transaction.</p><p>You will have 5 minutes to complete the process.<br /><strong>For this reason we recommend preparing your debit/credit card before initiating the payment process.</strong></p><p>If for any reason the process is not completed within the available time, the internet connection which allows you to reach the website of your bank will be closed, if this happens you can just log in again with the credentials you just registered and repeat the process up a maximum of 3 times.</p>",
            }
          }
        />
        <div
          className="row"
        >
          <Link
            className="button full"
            onClick={[Function]}
            to="/default/status"
          >
            Proceed with the payment
          </Link>
        </div>
        <div
          className="row"
        >
          <button
            className="button full"
            onClick={[Function]}
            type="button"
          >
            Cancel operation and log out
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test <PaymentStatus /> cases should render failed state 1`] = `
<div
  className="container content"
>
  <div
    className="inner"
  >
    <div
      className="main-column"
    >
      <div
        className="inner"
      >
        <h2
          className="row payment-status-row-1"
        >
          Payment Failed
        </h2>
        <div
          className="row payment-status-row-2"
        >
          Something went wrong with the payment.
        </div>
        <div
          className="row payment-status-row-3"
        >
          <Link
            className="button full"
            to="/default/payment/draft"
          >
            Try again
          </Link>
        </div>
        <div
          className="row payment-status-row-4"
        >
          <p>
            If you cannot complete the transaction you can either try to get in touch with your bank or cancel the operation.
          </p>
          <button
            className="button full"
            onClick={[Function]}
            type="button"
          >
            Cancel operation and log out
          </button>
        </div>
      </div>
    </div>
    <Connect(Contact) />
  </div>
</div>
`;
